[project]
name = "pytilpack"
dynamic = ["version"]
description = "Python Utility Pack"
license = {text = "MIT"}
authors = [
    {name = "aki.", email = "mark@aur.ll.to"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "mcp>=1.0.0",
    "werkzeug>=3.1.7",
]

[project.optional-dependencies]
all = [
    "azure-identity>=1.23.0",
    "babel>=2.18.0",
    "bleach>=6.2",
    "cryptography>=46.0.6",
    "fastapi>=0.111",
    "flask-login>=0.6",
    "flask>=3.0",
    "html5lib",
    "hypercorn>=0.18.0",
    "markdown>=3.6",
    "msal>=1.32.3",
    "pillow",
    "pycryptodome",
    "pydantic>=2.12.5",
    "pytest",
    "pytest-asyncio",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0",
    "quart-auth>=0.11.0",
    "quart>=0.20.0",
    "sqlalchemy>=2.0",
    "tabulate[widechars]>=0.9",
    "tiktoken>=0.6",
    "tinycss2>=1.4",
    "tqdm>=4.0",
    "uvicorn>=0.34.3",
]
bleach = [
    "bleach>=6.2",
]
fastapi = [
    "fastapi>=0.111",
    "html5lib",
]
flask = [
    "flask-login>=0.6",
    "flask>=3.0",
    "html5lib",
    "pytest",
]
markdown = [
    "bleach",
    "markdown>=3.6",
    "tinycss2",
]
pycryptodome = [
    "pycryptodome",
]
pytest = [
    "pytest",
    "pytest-asyncio",
]
pyyaml = [
    "pyyaml>=6.0",
]
sqlalchemy = [
    "sqlalchemy>=2.0",
    "tabulate[widechars]>=0.9",
]
tiktoken = [
    "openai>=1.99.6",
    "pillow",
    "tiktoken>=0.6",
]
tqdm = [
    "tqdm>=4.0",
]
quart = [
    "html5lib",
    "hypercorn>=0.18.0",
    "pytest",
    "quart-auth>=0.11.0",
    "quart>=0.20.0",
    "uvicorn>=0.34.3",
]
msal = [
    "azure-identity>=1.23.0",
    "cryptography>=46.0.6",
    "msal>=1.32.3",
]
mcp = []  # 後方互換用（bs4/mcpはコア依存へ統合済み）
babel = [
    "babel>=2.18.0",
]
environ = [
    "python-dotenv>=1.2.2",
]
htmlrag = []  # 後方互換用（bs4はコア依存へ統合済み）
pydantic = [
    "pydantic>=2.12.5",
]
web = [
    "html5lib>=1.1",
]

[dependency-groups]
dev = [
    "aiosqlite<0.22", # 0.22 系には不具合があるようで pytest が終わらなくなる
    "litellm>=1.72.4",
    "mkdocs-llmstxt>=0.2",
    "mkdocs-material>=9.6",
    "mkdocs>=1.6",
    "mkdocstrings[python]>=0.29",
    "pyfltr[python]>=3.0.1",
    "pylint-pydantic>=0.4.1",
    "pyright[nodejs]>=1.1.403",
    "pytest-xdist>=3.5",
    "types-bleach>=6.2.0.20241123",
    "types-markdown>=3.7.0.20241204",
    "types-pyyaml>=6.0.12.20241230",
    "types-requests>=2.32.4.20250913",
    "types-tabulate>=0.9.0.20241207",
    "uv-sort>=0.6.0",
]

[project.scripts]
pytilpack = "pytilpack.cli.main:main"

[tool.uv]
default-groups = ["dev"]
exclude-newer = "1 day"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.pyfltr]
preset = "latest"
python = true
ty = true
# tyは型推論が発展途上のため、サードパーティの型定義やParamSpec周りの偽陽性を抑制する
ty-args = [
    "check",
    "--output-format", "concise",
    "--error-on-warning",
    "--ignore", "invalid-argument-type",
    "--ignore", "invalid-return-type",
    "--ignore", "invalid-context-manager",
    "--ignore", "unresolved-attribute",
    "--ignore", "invalid-type-form",
    "--ignore", "invalid-assignment",
    "--ignore", "no-matching-overload",
    "--ignore", "invalid-method-override",
    "--ignore", "unused-type-ignore-comment",
    "--ignore", "redundant-cast",
]
pylint-args = ["--jobs=4"]
extend-exclude = ["docs/api"]

[tool.ruff]
# https://docs.astral.sh/ruff/configuration/
line-length = 128

[tool.ruff.lint]
# https://docs.astral.sh/ruff/linter/#rule-selection
select = [
    # pydocstyle
    "D",
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # flake8-import-conventions
    "ICN",
    # isort
    "I",
]
ignore = [
    "D107", # Missing docstring in `__init__`
    "D415", # First line should end with a period
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**_test.py" = ["D"]
"**/__init__.py" = ["D104"]  # Missing docstring in public package

[tool.mypy]
# https://mypy.readthedocs.io/en/stable/config_file.html
allow_redefinition = true
check_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true

[tool.typos.default.extend-identifiers]
# SQLAlchemyの非同期カウントメソッド
acount = "acount"

[tool.pytest.ini_options]
# https://docs.pytest.org/en/latest/reference/reference.html#ini-options-ref
addopts = "--showlocals -p no:cacheprovider --maxfail=5 --durations=30 --durations-min=0.5 -n 4"
log_level = "DEBUG"
xfail_strict = true
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
